updated nginx conf for production

--- a/conf/nginx-dev/nginx.conf
+++ b/conf/nginx-dev/nginx.conf
@@ -60,7 +60,7 @@ server {
       #access_log  logs/host.access.log  main;
 		       
        access_log /usr/local/wormbase/website/staging/logs/cache.log cache;
-       access_log /usr/local/wormbase/website/staging/access.log main;
+       access_log /usr/local/wormbase/website/staging/logs/access.log main;
        # Error log; other directives: notice | info
        error_log  /usr/local/wormbase/website/staging/logs/error.log warn;
 
@@ -137,6 +137,7 @@ server {
 #          proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
+	# TO BE CONFIGURED
         location /static {
             root  /usr/local/wormbase/website/staging/root;
         }
@@ -159,10 +160,10 @@ server {
       #charset koi8-r;
       #access_log  logs/host.access.log  main;
 		       
-       access_log /usr/local/wormbase/logs/dev.wormbase.org-cache.log cache;
-       access_log /usr/local/wormbase/logs/dev.wormbase.org-access.log main;
+       access_log /usr/local/wormbase/logs/classic-nginx-cache.log cache;
+       access_log /usr/local/wormbase/logs/classic-nginx-access.log main;
        # Error log; other directives: notice | info
-       error_log  /usr/local/wormbase/logs/dev.wormbase.org-error.log warn;
+       error_log  /usr/local/wormbase/logs/classic-nginx-error.log warn;
 
        # Enable gzip compression
        gzip             on;
