--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -24,6 +24,17 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
     access_log /usr/local/wormbase/logs/nginx-access.log main;
+
+
+    # log for cache hits.
+   log_format cache '***$time_local '
+	            '$upstream_cache_status '
+                    'Cache-Control: $upstream_http_cache_control '
+                    'Expires: $upstream_http_expires '
+                    '"$request" ($status) '
+		    '"$http_user_agent" ';
+
+
  
     # Load-balancing against a pool of fastcgi TCP sockets.
     # Simple load-balancing.
@@ -55,32 +66,26 @@ http {
     keepalive_timeout  65;
 
   server {
-#      server_name beta.wormbase.org;
-      server_name www.wormbase.org wormbase.org;
+      server_name beta.wormbase.org;
+#      server_name www.wormbase.org wormbase.org;
 
       # Where the reverse proxy will listen
-      listen      2011;
+#      listen      80;
+      listen 2011;
 
-      #charset koi8-r;
-      #access_log  logs/host.access.log  main;
+      access_log /usr/local/wormbase/website/production/logs/cache.log cache;
+      access_log /usr/local/wormbase/website/production/logs/access.log main;
+      # Error log; other directives: notice | info
+      error_log  /usr/local/wormbase/website/production/logs/error.log warn;
 
-      # log for cache hits.
-      log_format cache '***$time_local '
-		       '$upstream_cache_status '
-		       'Cache-Control: $upstream_http_cache_control '
-                       'Expires: $upstream_http_expires '
-                       '"$request" ($status) '
-		       '"$http_user_agent" ';
-       access_log /usr/local/wormbase/logs/nginx-cache.log cache;
+      # Enable gzip compression
+      gzip             on;
+      gzip_min_length  1000;
+      gzip_proxied     any;
+      gzip_types       text/xml text/plain application/xml;
 
-       # Enable gzip compression
-       gzip             on;
-       gzip_min_length  1000;
-       gzip_proxied     any;
-       gzip_types       text/xml text/plain application/xml;
-
-       include       mime.types;
-       default_type  application/octet-stream;
+      include       mime.types;
+      default_type  application/octet-stream;
 
        #error_page  404              /404.html;
        # redirect server error pages to the static page /50x.html
@@ -156,9 +161,9 @@ http {
 #          proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
-
+	# TO BE CONFIGURED/TESTED
         location /static {
-            root  /var/www/MyApp/root;
+            root  /usr/local/wormbase/website/production/root;
         }
 
 
@@ -223,5 +228,4 @@ http {
     #        index  index.html index.htm;
     #    }
     #}
-
 }
