expanded number of workers for both prod and dev; adjusted some paths

--- a/conf/nginx-dev/nginx.conf
+++ b/conf/nginx-dev/nginx.conf
@@ -1,15 +1,14 @@
 
-#user  nobody;
-worker_processes  1;
-#worker_processes  2;
+user  www-data;
+worker_processes  5;
 daemon off;
-
+#keepalive_timeout  2;
 
 # Error log; other directives: notice | info
 error_log  /usr/local/wormbase/logs/nginx-error.log warn;
 
 # pid file (defaults to logs)
-pid        /usr/local/wormbase/nginx/logs/nginx.pid;
+pid        /usr/local/wormbase/services/nginx/logs/nginx.pid;
 
 events {
     worker_connections  1024;
@@ -48,7 +47,59 @@ http {
 
 #############################################
 #
-#  staging.wormbase.org; starman on 5000
+#  nagios:8080
+#
+#############################################
+server {
+       listen   8080;
+       server_name  dev.wormbase.org;
+ 
+       access_log  /usr/local/wormbase/logs/nagios-acccess.log;
+ 
+       location / {
+ 	     root   /usr/local/wormbase/services/nagios/share;
+	     index index.php;
+#	     fastcgi_index  index.php;
+#index  index.php;
+#             fastcgi_pass   127.0.0.1:9000;
+	     rewrite	  ^/nagios/images/(.*) /images/$1 break;
+	     rewrite	  ^/nagios/stylesheets/(.*) /stylesheets/$1 break;
+#             auth_basic	  "Restricted";
+#             auth_basic_user_file	conf/htpasswd;
+	}
+
+
+        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+        #
+        location ~ \.php$ {
+ 	    root   /usr/local/wormbase/services/nagios/share;
+            fastcgi_pass   127.0.0.1:9000;
+            fastcgi_index  index.php;
+            fastcgi_param  SCRIPT_FILENAME  /usr/local/wormbase/services/nagios/share$fastcgi_script_name;
+	    include /usr/local/wormbase/services/nginx/conf/fastcgi_params;
+        }
+ 
+       location ~ \.cgi$ {
+ 	     root	/usr/local/wormbase/services/nagios/sbin;
+	     rewrite	^/nagios/cgi-bin/(.*)\.cgi /$1.cgi break;
+ 
+	     include /usr/local/wormbase/services/nginx/conf/fastcgi_params;
+             fastcgi_pass   127.0.0.1:49233;
+             fastcgi_param  SCRIPT_FILENAME  /usr/local/wormbase/services/nagios/sbin$fastcgi_script_name;  # same path as above
+ 
+#	     auth_basic		"Restricted";
+#	     auth_basic_user_file	conf/htpasswd;
+ 
+#	     fastcgi_param  AUTH_USER     $remote_user;
+#            fastcgi_param  REMOTE_USER	  $remote_user;
+       }
+}
+
+
+
+#############################################
+#
+#  staging.wormbase.org, nginx port 80, starman 5000
 #
 #############################################
 
@@ -205,9 +256,7 @@ server {
             # Or load-balanced pool (currently of one)
 #           fastcgi_pass wormbase;
 
-            ########################################
-            #  Pool of PSGI/Starman hosts
-            ######################################## 
+
             proxy_set_header Host $http_host;
             proxy_set_header X-Forwarded-Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
