--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -1,9 +1,6 @@
-
-#user  nobody;
-worker_processes  1;
-#worker_processes  2;
+user www-data;
+worker_processes  5;
 daemon off;
-
 
 # Error log; other directives: notice | info
 error_log  /usr/local/wormbase/logs/nginx-error.log warn;
@@ -70,6 +67,7 @@ http {
 #      server_name www.wormbase.org wormbase.org;
 
       # Where the reverse proxy will listen
+      # eventually on 80;
 #      listen      80;
       listen 2011;
 
