fixed problem where nginx would not go into daemon mode; change pidfile path; small fixes for deployment

--- a/conf/nginx-dev/nginx.conf
+++ b/conf/nginx-dev/nginx.conf
@@ -1,7 +1,7 @@
 
 user  www-data;
 worker_processes  5;
-daemon off;
+daemon on;
 #keepalive_timeout  2;
 
 # Error log; other directives: notice | info
