--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -1,6 +1,6 @@
 user www-data;
 worker_processes  5;
-daemon off;
+daemon on;
 
 # Error log; other directives: notice | info
 error_log  /usr/local/wormbase/logs/nginx-error.log warn;
