--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -108,7 +108,6 @@ http {
 
 
 
-# fastcgi
        location / {
 
             ########################################
@@ -150,6 +149,12 @@ http {
  	    proxy_connect_timeout           75;
   	    proxy_read_timeout              205;
 
+
+#	    set $memcached_key $uri;
+#    	    memcached_pass     name:11211;
+#    	    default_type       text/html;
+#    	    error_page         404 @fallback;
+ 	    
   	# Back end server configuration
   #            root   html;
   #            index  index.html index.htm;
@@ -165,6 +170,10 @@ http {
             root  /usr/local/wormbase/website/production/root;
         }
 
+
+#        location @fallback {
+#            proxy_pass backend;
+#        }
 
 	# Examples on how to send certain things to certain places
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
