more tweaks to the deployment strategy; closer to goal of hot updates

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -165,9 +165,19 @@ http {
 #          proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
-	# TO BE CONFIGURED/TESTED
-        location /static {
-            root  /usr/local/wormbase/website/production/root;
+
+	# Serve static files directly from nginx
+        location /css {
+            root  /usr/local/wormbase/website/staging/root/css;
+        }
+        location /js {
+            root  /usr/local/wormbase/website/staging/root/js;
+        }
+        location /img {
+            root  /usr/local/wormbase/website/staging/root/img;
+        }
+        location /tmp {
+            root  /usr/local/wormbase/website/staging/root/tmp;
         }
 
 
