squid conf for remote biomart instance

--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -1596,6 +1596,7 @@ cache_peer 143.48.220.100 parent 80 0 no-query no-digest originserver name=synte
 
 # Biomart
 cache_peer 206.108.125.189 parent 80 0 no-query no-digest originserver name=biomart
+#cache_peer 131.215.52.7 parent 9002 0 no-query no-digest originserver name=biomart
 
 
 ###########################################
