changing support db management around

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -50,16 +50,17 @@ OICR_SITE_NODES=("
 	     wb-web4.oicr.on.ca
      ")
 
+
 # Some operations need all nodes (like syncing the admin module)
 OICR_ALL_NODES=("wb-gb1.oicr.on.ca
 	         wb-gb2.oicr.on.ca
                  wb-mining.oicr.on.ca
                  wb-web1.oicr.on.ca
-                 wb-web2.oicr.on.ca
 		 wb-web3.oicr.on.ca
 		 wb-web4.oicr.on.ca
 		 wb-biomart.oicr.on.ca
 		 ")
+#                 wb-web2.oicr.on.ca
 	
 
 # Local site staging directory
