--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -67,7 +67,7 @@ OICR_ALL_NODES=("wb-gb1.oicr.on.ca
 SITE_STAGING_DIRECTORY=/usr/local/wormbase/website-classic-staging
 
 # Remote site staging directory
-SITE_TARGET_DIRECTORY=/usr/local/wormbase/website-classic
+SITE_TARGET_DIRECTORY=/usr/local/wormbase/website/classic
 
 
 ##############################
@@ -121,10 +121,6 @@ OICR_MYSQL_NODES=("
 	wb-web4.oicr.on.ca
 ");
 
-#REMOTE_MYSQL_NODES=("
-#		brie3.cshl.org
-#		brie6.cshl.org
-#		canopus.caltech.edu")
 REMOTE_MYSQL_NODES=("canopus.caltech.edu")
 
 
@@ -136,6 +132,7 @@ TARGET_MYSQL_DATA_DIR=/usr/local/mysql/data
 
 # MySQL databases that we are mirroring
 MYSQL_DATABASES=("b_malayi
+	          c_angaria
 		  c_brenneri
                   c_briggsae 
                   c_elegans 
