simple precaching in anticipation of extended release cycle; C. angaria versus PS1010

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -16,6 +16,7 @@ LOCAL_NFS_ROOT=/usr/local/wormbase/shared
 
 
 SPECIES=("
+        c_angaria
 	c_elegans
 	c_briggsae
 	c_brenneri
@@ -27,7 +28,6 @@ SPECIES=("
 	h_bacteriophora
 	h_contortus
 	b_malayi
-        ps1010
 	")
 
 
