added password protection of sites

--- a/conf/nginx-dev/nginx.conf
+++ b/conf/nginx-dev/nginx.conf
@@ -65,7 +65,7 @@ server {
 	     rewrite	  ^/nagios/images/(.*) /images/$1 break;
 	     rewrite	  ^/nagios/stylesheets/(.*) /stylesheets/$1 break;
 #             auth_basic	  "Restricted";
-#             auth_basic_user_file	conf/htpasswd;
+#             auth_basic_user_file	htpasswd;
 	}
 
 
@@ -88,7 +88,7 @@ server {
              fastcgi_param  SCRIPT_FILENAME  /usr/local/wormbase/services/nagios/sbin$fastcgi_script_name;  # same path as above
  
 #	     auth_basic		"Restricted";
-#	     auth_basic_user_file	conf/htpasswd;
+#	     auth_basic_user_file	htpasswd;
  
 #	     fastcgi_param  AUTH_USER     $remote_user;
 #            fastcgi_param  REMOTE_USER	  $remote_user;
@@ -183,6 +183,9 @@ server {
 #          proxy_cache_bypass $cookie___ac;
 #          proxy_cache thecache;
 #          proxy_cache_key $scheme$proxy_host$request_uri;
+           auth_basic            "Restricted";
+           auth_basic_user_file  htpasswd;
+
         }
 
 
@@ -196,6 +199,10 @@ server {
         location /img {
             root  /usr/local/wormbase/website/staging/root;
         }
+
+        location /docs {
+            root  /usr/local/wormbase/website/staging/root;
+	}
 
 	# The tmp dir is moving.
         location /tmp {
@@ -390,10 +397,19 @@ server {
 #          proxy_cache_bypass $cookie___ac;
 #          proxy_cache thecache;
 #          proxy_cache_key $scheme$proxy_host$request_uri;
+
+
+           auth_basic            "Restricted";
+           auth_basic_user_file  htpasswd;
         }
 
         location /static {
             root  /usr/local/wormbase/website/tharris/root;
+        }
+
+        location /docs {
+            root  /usr/local/wormbase/website/tharris/root;
+	    autoindex on;
         }
     }
 
@@ -454,9 +470,16 @@ server {
  	    proxy_temp_file_write_size      64k;
  	    proxy_connect_timeout           75;
   	    proxy_read_timeout              205;
+
+           auth_basic            "Restricted";
+           auth_basic_user_file  htpasswd;
        }
 
        location /static {
+            root  /usr/local/wormbase/website/acabunoc/root;
+        }
+
+        location /docs {
             root  /usr/local/wormbase/website/acabunoc/root;
         }
     }
@@ -523,11 +546,19 @@ server {
   #            root   html;
   #            index  index.html index.htm;
 
+           auth_basic            "Restricted";
+           auth_basic_user_file  htpasswd;
+
         }
 
         location /static {
             root  /usr/local/wormbase/website/xshi/root;
         }
+
+        location /docs {
+            root  /usr/local/wormbase/website/xshi/root;
+	}
+
 			
 		location /gb2 {
 			proxy_pass http://localhost:9005;
@@ -606,15 +637,20 @@ server {
 #          proxy_cache_bypass $cookie___ac;
 #          proxy_cache thecache;
 #          proxy_cache_key $scheme$proxy_host$request_uri;
+
+           auth_basic            "Restricted";
+           auth_basic_user_file  htpasswd;
+
         }
 
         location /static {
             root  /usr/local/wormbase/website/norie/root;
         }
+
+        location /docs {
+            root  /usr/local/wormbase/website/xshi/root;
+	}
+
     }
-
-
-
-
 
 }
