redirection that fixes problem due to broken URL generated by gbrowse; not proxy friendly

--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -634,13 +634,13 @@ acl social urlpath_regex ^/forums(.*)?$ ^/blog(.*)?$ ^/wiki(.*)?$
 
 # Send various mining queries to a single box.
 #acl mining url_regex wb_query aql_query class_query batch_genes searches/advanced_dumper searches/epcr searches/strains cisortho blast_blat searches/blat searches/basic
-acl mining url_regex wb_query aql_query class_query batch_genes searches/advanced_dumper searches/epcr searches/strains cisortho blast_blat searches/blat
+acl mining url_regex get wb_query aql_query class_query batch_genes searches/advanced_dumper searches/epcr searches/strains cisortho blast_blat searches/blat
 
 # biomart
 acl biomart url_regex biomart martview
 
 # GBrowse2 URLs: Done 7/23/2010
-acl gbrowse2        url_regex  gb2/gbrowse gbrowse2/i db/gb2 gbrowse_img
+acl gbrowse2        url_regex  gb2/gbrowse gbrowse2/i db/gb2 gbrowse_img gb2
 acl gbrowse2_static url_regex gbrowse2/images gb2-support gbrowse2/css gbrowse2/js
 #acl gbrowse1 url_regex  seq/gbrowse seq/gbrowse/gbgff gbrowse/tmp gbrowse_img gb1-support
 #acl gbrowse1_proper     urlpath_regex ^/gbrowse
@@ -1569,9 +1569,10 @@ cache_peer 206.108.125.168 parent 8080 0 no-query no-digest originserver round-r
 #cache_peer 206.108.125.168 parent 8000 0 no-query no-digest originserver round-robin name=wb-web4-new
 
 # Data mining and gbrowse
+cache_peer 206.108.125.173 parent 80   0 no-query no-digest originserver name=gbrowse2
 cache_peer 206.108.125.178 parent 8080 0 no-query no-digest originserver name=mining
 #cache_peer 206.108.125.173 parent 8080 0 no-query no-digest originserver name=gbrowse1
-cache_peer 206.108.125.173 parent 80   0 no-query no-digest originserver name=gbrowse2
+
 
 # Social sites: blog, wiki, forums
 # I have virtual hosts listening on these ports
@@ -1636,6 +1637,7 @@ cache_peer_access forums deny all
 # Data mining queries
 cache_peer_access mining allow mining
 cache_peer_access mining allow mining-images
+cache_peer_access mining deny gbrowse2
 cache_peer_access mining deny all
 
 # Biomart queries
@@ -1648,11 +1650,11 @@ cache_peer_access biomart deny all
 #cache_peer_access brie6 deny all
 #cache_peer_access brie3 allow gene
 #cache_peer_access brie3 deny all
-cache_peer_access wb-web1  deny gene
+#cache_peer_access wb-web1  allow gene
 cache_peer_access wb-web2  allow gene
 cache_peer_access wb-web3  allow gene
 cache_peer_access wb-web4  allow gene
-cache_peer_access mining allow gene
+cache_peer_access mining   allow gene
 
 # /db and static requests, distributed across web1-web4
 # We have to deny gbrowse1/2 and mining because they are under /db.
