trying to rectify a whole bunch of files never commited

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -10,6 +10,10 @@ STAGING_NODE=brie3.cshl.org
 #FTP_SERVER=brie4.cshl.org
 #FTP_SITE_USER=todd
 
+FTP_ROOT=/usr/local/ftp/pub/wormbase
+FTP_SPECIES_ROOT=${FTP_ROOT}/species
+FTP_RELEASE_ROOT=${FTP_ROOT}/releases
+
 LOCAL_NFS_SERVER=wb-web1.oicr.on.ca
 LOCAL_NFS_ROOT=/usr/local/wormbase/shared
 
