started migrating production code to framework; testing with 225

--- a/update/production/update.conf
+++ b/update/production/update.conf
@@ -2,11 +2,6 @@
 FDT_JAR=/home/tharris/fdt/fdt.jar
 
 
-# The first production node that we will stage updates from.
-# This is not necessary if the development node and all
-# production nodes reside within the firewall
-STAGING_NODE=brie3.cshl.org
-
 #FTP_SERVER=brie4.cshl.org
 #FTP_SITE_USER=todd
 
@@ -83,6 +78,7 @@ THIRD_PARTY_BUILD_DIR=build
 ############################################
 # ACEDB - nodes which serve acedb requests
 ############################################
+# MIGRATED TO NEW STRUCTURE as local_acedb_nodes
 OICR_ACEDB_NODES=("
 	wb-mining.oicr.on.ca
 	wb-web1.oicr.on.ca
@@ -96,6 +92,7 @@ OICR_ACEDB_NODES=("
 REMOTE_ACEDB_NODES=("canopus.caltech.edu")
 
 # Where our ACEDB files reside
+# ALREADY HANDLED
 ACEDB_ROOT=/usr/local/wormbase/acedb
 
 # A generiACEDB database
@@ -159,6 +156,7 @@ MYSQL_DATABASES=("b_malayi
 # Kept in sync with local and remote production nodes by cron
 # cron-rsync_support_dbs.sh
 ##########################################################
+# ALREADY MIGRATED TO NEW STRUCTURE
 SUPPORT_DB_DIRECTORY=/usr/local/wormbase/databases
 OICR_SUPPORT_DB_NODES=("wb-web1.oicr.on.ca
 			wb-web2.oicr.on.ca
