gbrowse load balancing

--- a/squid/etc/squid3-redirector.conf
+++ b/squid/etc/squid3-redirector.conf
@@ -614,7 +614,7 @@ acl PURGE method purge
 # This is the main website name, not the name of the proxy.
 #acl our_servers dstdomain wb-web1.oicr.on.ca
 acl wormbase_one dstdomain www.wormbase.org
-acl wormbase_two dstdomain beta.wormbase.org
+acl wormbase-two dstdomain beta.wormbase.org
 
 
 # Blog, forums, wiki. These are now all subdomains
@@ -1574,7 +1574,6 @@ cache_peer 206.108.125.168 parent 8080 0 no-query no-digest originserver round-r
 
 # Data mining and gbrowse
 cache_peer 206.108.125.173 parent 80   0 no-query no-digest originserver name=gbrowse2
-#cache_peer 206.108.125.174 parent 80   0 no-query no-digest originserver name=gbrowse2
 cache_peer 206.108.125.178 parent 8080 0 no-query no-digest originserver name=mining
 #cache_peer 206.108.125.173 parent 8080 0 no-query no-digest originserver name=gbrowse1
 
