--- a/log4perl/staging.conf
+++ b/log4perl/staging.conf
@@ -3,7 +3,7 @@
 # The root logger has a very low threshold for development
 log4perl.rootlogger=DEBUG, logfile
 log4perl.appender.logfile=Log::Log4perl::Appender::File
-log4perl.appender.logfile.filename=logs/catalyst.log
+log4perl.appender.logfile.filename= sub { my $hostname = `hostname`; chomp $hostname ; return "logs/$hostname-catalyst.log" };
 log4perl.appender.logfile.mode=append
 log4perl.appender.logfile.layout=PatternLayout
 log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
