gbrowse2 config for beta test

--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -644,6 +644,12 @@ acl biomart url_regex biomart martview
 acl gbrowse2        url_regex  gb2/gbrowse gbrowse2/i db/gb2 gbrowse_img gb2
 acl gbrowse2_static url_regex gbrowse2/images gb2-support gbrowse2/css gbrowse2/js
 
+# GBrowse2 (beta site)
+#gb2-support gbrowse2/css gbrowse2/js
+#browse2/i db/gb2 gbrowse_img gb2
+acl gbrowse2-beta        url_regex tools/genome  # cgi
+acl gbrowse2_static-beta url_regex gbrowse2/i    # images
+
 # Synteny Browser
 acl synteny url_regex gbrowse_syn synteny gbrowse/tmp/compara
 
@@ -1573,6 +1579,9 @@ cache_peer 206.108.125.164 parent 5000 0 no-query no-digest originserver round-r
 cache_peer 206.108.125.163 parent 5000 0 no-query no-digest originserver round-robin name=wb-web8
 cache_peer 206.108.125.162 parent 5000 0 no-query no-digest originserver round-robin name=wb-web9
 cache_peer 206.108.125.166 parent 5000 0 no-query no-digest originserver round-robin name=wb-web10
+cache_peer 206.108.125.173 parent 8000 0 no-query no-digest originserver name=gb1-beta
+#cache_peer 206.108.125.174 parent 8000 0 no-query no-digest originserver round-robin name=gb2-beta
+
 
 # Data mining and gbrowse
 cache_peer 206.108.125.173 parent 80   0 no-query no-digest originserver round-robin name=gb1
@@ -1605,15 +1614,29 @@ cache_peer 206.108.125.189 parent 80 0 no-query no-digest originserver name=biom
 ###########################################
 
 # The new web site
+
+# GBrowse2 (beta site; virtual host on gb1)
+cache_peer_access gb1-beta allow gbrowse2-beta
+cache_peer_access gb1-beta allow gbrowse2_static-beta
+cache_peer_access gb1-beta deny all
+
+cache_peer_access wb-web7  deny gbrowse2-beta
+cache_peer_access wb-web7  deny gbrowse2_static-beta
 cache_peer_access wb-web7  allow beta-site
 cache_peer_access wb-web7  deny all
 
+cache_peer_access wb-web8  deny gbrowse2-beta
+cache_peer_access wb-web8  deny gbrowse2_static-beta
 cache_peer_access wb-web8  allow beta-site
 cache_peer_access wb-web8  deny all
 
+cache_peer_access wb-web9  deny gbrowse2-beta
+cache_peer_access wb-web9  deny gbrowse2_static-beta
 cache_peer_access wb-web9  allow beta-site
 cache_peer_access wb-web9  deny all
 
+cache_peer_access wb-web10 deny gbrowse2-beta
+cache_peer_access wb-web10 deny gbrowse2_static-beta
 cache_peer_access wb-web10 allow beta-site
 cache_peer_access wb-web10 deny all
 
@@ -1623,10 +1646,16 @@ cache_peer_access wb-web10 deny all
 # GBrowse2
 cache_peer_access gb1 allow gbrowse2
 cache_peer_access gb1 allow gbrowse2_static
+cache_peer_access gb1 deny gbrowse2-beta
+cache_peer_access gb1 deny gbrowse2_static-beta
 cache_peer_access gb1 deny all
+cache_peer_access gb2 deny gbrowse2-beta
+cache_peer_access gb2 deny gbrowse2_static-beta
 cache_peer_access gb2 allow gbrowse2
 cache_peer_access gb2 allow gbrowse2_static
 cache_peer_access gb2 deny all
+
+
 
 
 # The synteny browser
@@ -2342,11 +2371,11 @@ pid_filename /usr/local/squid/var/logs/squid.pid
 #	"ALL,1".
 #
 #Default:
-#debug_options ALL,1
+debug_options ALL,1
 #debug_options ALL,9
 
 # For debugging ACLs
-debug_options ALL,1 33,2 28,9
+#debug_options ALL,1 33,2 28,9
 
 #  TAG: log_fqdn	on|off
 #	Turn this on if you wish to log fully qualified domain names
