general production tweaks

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user www-data;
+user daemon;
 worker_processes  5;
 daemon on;
 
@@ -9,6 +9,7 @@ error_log  /usr/local/wormbase/logs/nginx-error.log warn;
 pid        /usr/local/wormbase/logs/nginx.pid;
 
 events {
+    # Workers will die after this many requests.
     worker_connections  1024;
 }
 
@@ -24,14 +25,13 @@ http {
 
 
     # log for cache hits.
-   log_format cache '***$time_local '
-	            '$upstream_cache_status '
-                    'Cache-Control: $upstream_http_cache_control '
-                    'Expires: $upstream_http_expires '
-                    '"$request" ($status) '
-		    '"$http_user_agent" ';
-
-
+    log_format cache '***$time_local '
+	             '$upstream_cache_status '
+                     'Cache-Control: $upstream_http_cache_control '
+                     'Expires: $upstream_http_expires '
+                     '"$request" ($status) '
+		     '"$http_user_agent" ';
+ 
  
     # Load-balancing against a pool of fastcgi TCP sockets.
     # Simple load-balancing.
@@ -43,11 +43,12 @@ http {
        # TCP socket
        # server 127.0.0.1:20000   # or unix socket or hostname      
 
-       server 206.108.125.175:5000;
-       server 206.108.125.177:5000;
-       server 206.108.125.190:5000;
-       server 206.108.125.168:5000;
-       server 206.108.125.178:5000;
+       server 206.108.125.165:5000;
+       server 206.108.125.164:5000;
+       server 206.108.125.163:5000;
+       server 206.108.125.162:5000;
+       server 206.108.125.166:5000;
+
 
        # Or server name with weights
        # server george.constantshift.com weight=3  # eg; weighting
@@ -63,50 +64,38 @@ http {
     keepalive_timeout  65;
 
   server {
-
       server_name beta.wormbase.org;
-#      server_name www.wormbase.org wormbase.org;
-
-      # Where the reverse proxy will listen
-      # eventually on 80;
-#      listen      80;
-      listen 2011;
-
-      access_log /usr/local/wormbase/website/production/logs/cache.log cache;
-      access_log /usr/local/wormbase/website/production/logs/access.log main;
+      listen      9000;
+		       
+      access_log /usr/local/wormbase/logs/cache.log cache;
+      access_log /usr/local/wormbase/logs/access.log main;
       # Error log; other directives: notice | info
-      error_log  /usr/local/wormbase/website/production/logs/error.log warn;
+      error_log  /usr/local/wormbase/logs/error.log warn;
 
       # Enable gzip compression
-      gzip             on;
-      gzip_min_length  1000;
-      gzip_proxied     any;
-      gzip_types       text/xml text/plain application/xml;
+      # Turn off if we're sitting behind a caching server.
+#      gzip             on;
+#      gzip_min_length  1000;
+#      gzip_proxied     any;
+#      gzip_types       text/xml text/plain application/xml;
 
       include       mime.types;
       default_type  application/octet-stream;
 
-       #error_page  404              /404.html;
-       # redirect server error pages to the static page /50x.html
-       #
-#       error_page   500 502 503 504  /50x.html;
-#       location = /50x.html {
-#           root   html;
-#       }
+      #error_page  404              /404.html;
+      # redirect server error pages to the static page /50x.html
+      #
+      #   error_page   500 502 503 504  /50x.html;
+      #   location = /50x.html {
+      # root   html;
+      # }
 
-
-       # Show status information on /status
-       location = /status {
-           stub_status on;
-           allow 127.0.0.1;
-           deny all;
+      # Show status information on /status
+      location = /status {
+          stub_status on;
+          allow 127.0.0.1;
+          deny all;
        }
-
-       # TO HANDLE!
-       # do not cache when users are logged in..
-       #        proxy_cache_bypass $cookie___ac;
-
-
 
        location / {
 
@@ -116,12 +105,6 @@ http {
 #           include fastcgi_params; # We'll discuss this later
             # Unix socket
             # fastcgi_pass unix:/tmp/myapp.fcgi;
-   
-            # TCP socket
-            # fastcgi_pass  127.0.0.1:10004;
-	  
-            # Or load-balanced pool (currently of one)
-#           fastcgi_pass wormbase;
 
             ########################################
             #  Pool of PSGI/Starman hosts
@@ -132,9 +115,9 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header X-Forwarded-Port 443; #this is important for Catalyst Apps!
            
-	    # Proxy pass to a single server for testing:
-            # changed from http://localhost:5000/ which was causing double forward slash problems in the url
-#            proxy_pass http://localhost:5000;
+	    # Proxy pass to my localhost starman on 5000	    
+	    # proxy_pass http://localhost:5000;
+
             # Or to our pool of servers.
 	    proxy_pass http://wormbase;
 
@@ -149,12 +132,6 @@ http {
  	    proxy_connect_timeout           75;
   	    proxy_read_timeout              205;
 
-
-#	    set $memcached_key $uri;
-#    	    memcached_pass     name:11211;
-#    	    default_type       text/html;
-#    	    error_page         404 @fallback;
- 	    
   	# Back end server configuration
   #            root   html;
   #            index  index.html index.htm;
@@ -163,22 +140,61 @@ http {
 #          proxy_cache_bypass $cookie___ac;
 #          proxy_cache thecache;
 #          proxy_cache_key $scheme$proxy_host$request_uri;
-        }
 
+	   # Basic authentication
+           #  auth_basic            "Restricted";
+           # auth_basic_user_file  htpasswd;
+        }
 
 	# Serve static files directly from nginx
         location /css {
-            root  /usr/local/wormbase/website/production/root;
+            root  /usr/local/wormbase/shared/website/production/root;
         }
         location /js {
-            root  /usr/local/wormbase/website/production/root;
+            root  /usr/local/wormbase/shared/website/production/root;
         }
         location /img {
-            root  /usr/local/wormbase/website/production/root;
+            root  /usr/local/wormbase/shared/website/production/root;
         }
+
+        location /docs {
+            root  /usr/local/wormbase/shared/website/production/root;
+	}
+
+	# The tmp dir is moving.
         location /tmp {
-            root  /usr/local/wormbase/website/production/root;
+            root  /usr/local/wormbase/shared/website/production/root;
         }
+
+
+#       location / {
+#            rewrite         ^/(.*)$ https://myapp.example.com/$1 permanent;
+#        }
+
+#       # Force all sessions into https
+#       location / {
+#            rewrite         ^/(.*)$ https://localhost:443/$1 permanent;
+#        }
+
+        # Register and auth via ssl
+       location /auth/login {
+            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
+        }
+
+       location /register {
+            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
+        }
+   }
+
+
+       # TO HANDLE!
+       # do not cache when users are logged in..
+       #        proxy_cache_bypass $cookie___ac;
+
+       #	    set $memcached_key $uri;
+       #    	    memcached_pass     name:11211;
+       #    	    default_type       text/html;
+       #    	    error_page         404 @fallback;
 
 
 #        location @fallback {
@@ -208,42 +224,33 @@ http {
         #location ~ /\.ht {
         #    deny  all;
         #}
+    
+    # HTTPs for logging in.
+    server {
+        listen       443;
+        server_name  beta.wormbase.org;
+        ssl                  on;
+        ssl_certificate      /usr/local/wormbase/shared/admin/conf/nginx/server.crt;
+        ssl_certificate_key  /usr/local/wormbase/shared/admin/conf/nginx/server.key;
+        ssl_session_timeout  5m;
+
+        ssl_protocols  SSLv2 SSLv3 TLSv1;
+        ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
+        ssl_prefer_server_ciphers   on;
+
+        location / {
+              proxy_set_header Host $http_host;
+              proxy_set_header X-Forwarded-Host $http_host;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Port 443; #this is important for Catalyst Apps!
+              #proxy_pass http://beta.wormbase.org:5000; #changed from http://localhost:5000/ which was causing double forward slash problems in the url
+	      proxy_pass http://wormbase; #changed from http://localhost:5000/ which was causing double forward slash problems in the url
+         }
+
+#        location / {
+#            root   html;
+#            index  index.html index.htm;
+#        }
     }
-
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443;
-    #    server_name  localhost;
-
-    #    ssl                  on;
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_timeout  5m;
-
-    #    ssl_protocols  SSLv2 SSLv3 TLSv1;
-    #    ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
-    #    ssl_prefer_server_ciphers   on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
 }
