updated nginx with warm failover capability

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -23,7 +23,6 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
     access_log /usr/local/wormbase/logs/nginx-access.log main;
 
-
     # log for cache hits.
     log_format cache '***$time_local '
 	             '$upstream_cache_status '
@@ -43,15 +42,13 @@ http {
        # TCP socket
        # server 127.0.0.1:20000   # or unix socket or hostname      
 
-       server 206.108.125.165:5000;
-       server 206.108.125.164:5000;
-       server 206.108.125.163:5000;
-       server 206.108.125.162:5000;
-       server 206.108.125.166:5000;
+       server 206.108.125.164:5000 weight=10 max_fails=2000 fail_timeout=1m;
+       server 206.108.125.163:5000 weight=10 max_fails=2000 fail_timeout=1m;
+       server 206.108.125.162:5000 weight=10 max_fails=2000 fail_timeout=1m;
+       server 206.108.125.166:5000 weight=10 max_fails=2000 fail_timeout=1m;
 
-
-       # Or server name with weights
-       # server george.constantshift.com weight=3  # eg; weighting
+       # 165 is our dedicated couch server, but we can use it as a backup if needed.
+       server 206.108.125.165:5000 backup;
 
        # Unix socket on localhost
        # server unix:/tmp/wormbase.sock;
@@ -63,14 +60,68 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
+
+    # CouchDB PUT requests
+    # This is now handled by Squid (and not locked down);
+    # ANYONE can PUT to beta.wormbase.org...
+#    server {
+#        listen 5984;
+#	server_name beta.wormbase.org;
+#	
+#	# Send all put requests to our core CouchDB server.
+##      	if ($request_method = PUT) {
+#      	   proxy_pass http://staging.wormbase.org:5984/;
+##        }
+#   }
+
+
   server {
-      server_name beta.wormbase.org;
-      listen      9000;
+      server_name beta.wormbase.org;      
+      listen      9000;  # This will need to be updated to 80 when we aren't behind squid anymore.
 		       
       access_log /usr/local/wormbase/logs/cache.log cache;
       access_log /usr/local/wormbase/logs/access.log main;
       # Error log; other directives: notice | info
       error_log  /usr/local/wormbase/logs/error.log warn;
+
+      #############################################
+      #
+      # LOCKDOWN
+      #
+      #############################################      
+
+	# Send all put requests to our core CouchDB server.
+	# These are ONLY allowed in location / stanzas apparently.
+#      	if ($request_method = PUT) {
+#      	   proxy_pass http://206.108.125.165:5984/;
+#        }
+
+      # Only requests to our Host are allowed
+#      if ($host !~ ^(wormbase.org|www.wormbase.org)$ ) {
+      if ($host !~ ^(beta.wormbase.org)$ ) {
+         return 444;
+      }
+
+      # Only allow these request methods
+      if ($request_method !~ ^(GET|HEAD|POST|PUT)$ ) {
+         return 444;
+      }
+      
+
+      # Forums, blog, and wiki (all legacy as these are now subdomains)
+      location /forums {
+        proxy_pass http://forums.wormbase.org/;
+      }
+
+      location /wiki {
+        proxy_pass http://wiki.wormbase.org/;
+      }
+
+      location /blog {
+        proxy_pass http://blog.wormbase.org/;
+      }
+
+
 
       # Enable gzip compression
       # Turn off if we're sitting behind a caching server.
@@ -89,6 +140,13 @@ http {
       #   location = /50x.html {
       # root   html;
       # }
+
+      # System Maintenance (Service Unavailable) 
+      # Config broken?
+#      if (-f $document_root/system_maintenance.html ) {
+#        error_page 503 /system_maintenance.html;
+#        return 503;
+#      }
 
       # Show status information on /status
       location = /status {
@@ -114,12 +172,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             # proxy_set_header X-Forwarded-Port 443; #this is important for Catalyst Apps!
-           
-	    # Proxy pass to my localhost starman on 5000	    
-	    # proxy_pass http://localhost:5000;
-
-            # Or to our pool of servers.
+          
+            # Proxy pass to our pool of servers
 	    proxy_pass http://wormbase;
+	    # Or to a local starman
+	    # proxy_pass http://localhost:5000;
 
 #           proxy_redirect   off;
    	    client_max_body_size            0;
@@ -167,10 +224,6 @@ http {
         }
 
 
-#       location / {
-#            rewrite         ^/(.*)$ https://myapp.example.com/$1 permanent;
-#        }
-
 #       # Force all sessions into https
 #       location / {
 #            rewrite         ^/(.*)$ https://localhost:443/$1 permanent;
@@ -197,27 +250,6 @@ http {
        #    	    error_page         404 @fallback;
 
 
-#        location @fallback {
-#            proxy_pass backend;
-#        }
-
-	# Examples on how to send certain things to certain places
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
         #
@@ -225,6 +257,8 @@ http {
         #    deny  all;
         #}
     
+
+
     # HTTPs for logging in.
     server {
         listen       443;
