--- a/squid/etc/squid3-basic.conf
+++ b/squid/etc/squid3-basic.conf
@@ -611,6 +611,8 @@ acl CONNECT method CONNECT
 acl PURGE method purge
 
 
+acl PUT  method PUT
+
 # Access controls for our back end machines
 # This is the main website name, not the name of the proxy.
 #acl our_servers dstdomain wb-web1.oicr.on.ca
@@ -1574,18 +1576,27 @@ cache_peer 206.108.125.177 parent 8080 0 no-query no-digest originserver round-r
 cache_peer 206.108.125.190 parent 8080 0 no-query no-digest originserver round-robin name=wb-web3
 cache_peer 206.108.125.168 parent 8080 0 no-query no-digest originserver round-robin name=wb-web4
 
+# Cloud
+cache_peer 75.101.166.191 parent 9999 0 no-query no-digest originserver round-robin name=cloud
+
 # The new website (at least for beta testing period)
-cache_peer 206.108.125.164 parent 5000 0 no-query no-digest originserver round-robin name=wb-web7
-cache_peer 206.108.125.163 parent 5000 0 no-query no-digest originserver round-robin name=wb-web8
-cache_peer 206.108.125.162 parent 5000 0 no-query no-digest originserver round-robin name=wb-web9
-cache_peer 206.108.125.166 parent 5000 0 no-query no-digest originserver round-robin name=wb-web10
+# Directly to starman
+#cache_peer 206.108.125.165 parent 5000 0 no-query no-digest originserver round-robin name=wb-web6
+#cache_peer 206.108.125.164 parent 5000 0 no-query no-digest originserver round-robin name=wb-web7
+#cache_peer 206.108.125.163 parent 5000 0 no-query no-digest originserver round-robin name=wb-web8
+#cache_peer 206.108.125.162 parent 5000 0 no-query no-digest originserver round-robin name=wb-web9
+#cache_peer 206.108.125.166 parent 5000 0 no-query no-digest originserver round-robin name=wb-web10
+
+# Or via nginx
+cache_peer 206.108.125.175 parent 9000 0 no-query no-digest originserver round-robin name=beta-local
+cache_peer 206.108.125.165 parent 5984 0 no-query no-digest originserver round-robin name=couchdb
 cache_peer 206.108.125.173 parent 8000 0 no-query no-digest originserver name=gb1-beta
 #cache_peer 206.108.125.174 parent 8000 0 no-query no-digest originserver round-robin name=gb2-beta
 
 
 # Data mining and gbrowse
 cache_peer 206.108.125.173 parent 80   0 no-query no-digest originserver round-robin name=gb1
-cache_peer 206.108.125.174 parent 80   0 no-query no-digest originserver round-robin name=gb2
+#cache_peer 206.108.125.174 parent 80   0 no-query no-digest originserver round-robin name=gb2
 cache_peer 206.108.125.178 parent 8080 0 no-query no-digest originserver name=mining
 
 
@@ -1620,26 +1631,40 @@ cache_peer_access gb1-beta allow gbrowse2-beta
 cache_peer_access gb1-beta allow gbrowse2_static-beta
 cache_peer_access gb1-beta deny all
 
-cache_peer_access wb-web7  deny gbrowse2-beta
-cache_peer_access wb-web7  deny gbrowse2_static-beta
-cache_peer_access wb-web7  allow beta-site
-cache_peer_access wb-web7  deny all
+cache_peer_access couchdb allow PUT
+cache_peer_access couchdb deny all
 
-cache_peer_access wb-web8  deny gbrowse2-beta
-cache_peer_access wb-web8  deny gbrowse2_static-beta
-cache_peer_access wb-web8  allow beta-site
-cache_peer_access wb-web8  deny all
+cache_peer_access beta-local  deny gbrowse2-beta
+cache_peer_access beta-local  deny gbrowse2_static-beta
+cache_peer_access beta-local  deny PUT
+cache_peer_access beta-local  allow beta-site
+cache_peer_access beta-local  deny all
 
-cache_peer_access wb-web9  deny gbrowse2-beta
-cache_peer_access wb-web9  deny gbrowse2_static-beta
-cache_peer_access wb-web9  allow beta-site
-cache_peer_access wb-web9  deny all
 
-cache_peer_access wb-web10 deny gbrowse2-beta
-cache_peer_access wb-web10 deny gbrowse2_static-beta
-cache_peer_access wb-web10 allow beta-site
-cache_peer_access wb-web10 deny all
+#cache_peer_access wb-web10 deny gbrowse2-beta
+#cache_peer_access wb-web10 deny gbrowse2_static-beta
+#cache_peer_access wb-web10 allow beta-site
+#cache_peer_access wb-web10 deny all
 
+#cache_peer_access wb-web6  deny gbrowse2-beta
+#cache_peer_access wb-web6  deny gbrowse2_static-beta
+#cache_peer_access wb-web6  allow beta-site
+#cache_peer_access wb-web6  deny all
+
+#cache_peer_access wb-web7  deny gbrowse2-beta
+#cache_peer_access wb-web7  deny gbrowse2_static-beta
+#cache_peer_access wb-web7  allow beta-site
+#cache_peer_access wb-web7  deny all
+
+#cache_peer_access wb-web8  deny gbrowse2-beta
+#cache_peer_access wb-web8  deny gbrowse2_static-beta
+#cache_peer_access wb-web8  allow beta-site
+#cache_peer_access wb-web8  deny all
+
+#cache_peer_access wb-web9  deny gbrowse2-beta
+#cache_peer_access wb-web9  deny gbrowse2_static-beta
+#cache_peer_access wb-web9  allow beta-site
+#cache_peer_access wb-web9  deny all
 
 
 # Special cases: allow from its like-named ACL; deny from all others
@@ -1649,11 +1674,11 @@ cache_peer_access gb1 allow gbrowse2_static
 cache_peer_access gb1 deny gbrowse2-beta
 cache_peer_access gb1 deny gbrowse2_static-beta
 cache_peer_access gb1 deny all
-cache_peer_access gb2 deny gbrowse2-beta
-cache_peer_access gb2 deny gbrowse2_static-beta
-cache_peer_access gb2 allow gbrowse2
-cache_peer_access gb2 allow gbrowse2_static
-cache_peer_access gb2 deny all
+#cache_peer_access gb2 deny gbrowse2-beta
+#cache_peer_access gb2 deny gbrowse2_static-beta
+#cache_peer_access gb2 allow gbrowse2
+#cache_peer_access gb2 allow gbrowse2_static
+#cache_peer_access gb2 deny all
 
 
 
@@ -1695,11 +1720,27 @@ cache_peer_access wb-web2  allow gene
 cache_peer_access wb-web3  allow gene
 cache_peer_access wb-web4  allow gene
 cache_peer_access mining   allow gene
+cache_peer_access cloud    allow gene
 
 # /db and static requests, distributed across web1-web4
 # We have to deny gbrowse1/2 and mining because they are under /db.
 # We deny biomart, synteny, and social for safety
 # We allow everything else to distribute static content.
+
+# cloud
+cache_peer_access cloud  deny gbrowse2
+cache_peer_access cloud  deny gbrowse2_static
+cache_peer_access cloud  deny beta-site
+cache_peer_access cloud  deny mining
+cache_peer_access cloud  deny biomart
+cache_peer_access cloud  deny synteny
+cache_peer_access cloud  deny social
+cache_peer_access cloud  allow db
+#cache_peer_access cloud  allow web1-images
+cache_peer_access cloud  deny dynamic_images
+cache_peer_access cloud  allow !db
+cache_peer_access cloud  deny all
+
 
 
 # web1
