towards no-share

--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -148,22 +148,22 @@ http {
 
 	# Serve static files directly from nginx
         location /css {
-            root  /usr/local/wormbase/shared/website/production/root;
+            root  /usr/local/wormbase/website/production/root;
         }
         location /js {
-            root  /usr/local/wormbase/shared/website/production/root;
+            root  /usr/local/wormbase/website/production/root;
         }
         location /img {
-            root  /usr/local/wormbase/shared/website/production/root;
+            root  /usr/local/wormbase/website/production/root;
         }
 
         location /docs {
-            root  /usr/local/wormbase/shared/website/production/root;
+            root  /usr/local/wormbase/website/production/root;
 	}
 
 	# The tmp dir is moving.
         location /tmp {
-            root  /usr/local/wormbase/shared/website/production/root;
+            root  /usr/local/wormbase/tmp;
         }
 
 
