--- a/conf/nginx-dev/nginx.conf
+++ b/conf/nginx-dev/nginx.conf
@@ -210,6 +210,11 @@ server {
         location /tmp {
             root  /usr/local/wormbase/website/staging/root;
         }
+
+	location /tools/genome
+	    proxy_pass http://wb-gb1.oicr.on.ca/;	    
+	
+
     }
 
 
@@ -353,6 +358,79 @@ server {
        }
 
 
+      ########################################
+      #  Pool of fastcgi sockets
+      ######################################## 
+#      location / {
+#
+#            include fastcgi_params;
+#            
+#            # Unix socket
+#            # fastcgi_pass unix:/tmp/myapp.fcgi;
+#   
+#            # TCP/IP Port
+#            # fastcgi_pass  127.0.0.1:10004;
+#	  
+#            # Or load-balanced pool (currently of one)
+##           fastcgi_pass wormbase;
+#
+#      }
+       
+
+
+      ########################################
+      #  Starman
+      ######################################## 
+      location / {
+
+
+
+
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Forwarded-Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header X-Forwarded-Port 443; #this is important for Catalyst Apps!
+           
+	    # Proxy pass to a single server for testing:
+	    proxy_pass http://localhost:8000;
+
+#           proxy_redirect   off;
+   	    client_max_body_size            0;
+            client_body_buffer_size         128k;
+	    proxy_send_timeout              120;
+	    proxy_buffer_size               4k;
+	    proxy_buffers                   4 32k;
+  	    proxy_busy_buffers_size         64k;
+ 	    proxy_temp_file_write_size      64k;
+ 	    proxy_connect_timeout           75;
+  	    proxy_read_timeout              205;
+
+  	# Back end server configuration
+  #            root   html;
+  #            index  index.html index.htm;
+
+           # Caching diretives
+#          proxy_cache_bypass $cookie___ac;
+#          proxy_cache thecache;
+#          proxy_cache_key $scheme$proxy_host$request_uri;
+        }
+
+	# Nginx can't execute CGIs directly
+#	location /gb2 {
+#		alias /usr/local/wormbase/website/tharris/root/cgi/gb2
+#	}	
+#	location /gbrowse2/i/ {
+#		alias /usr/local/wormbase/website/tmp/gbrowse2/images/;
+#	}
+#		
+#	location /gbrowse2/ {
+#		alias /usr/local/wormbase/website/tharris/gbrowse2/current/html/; 
+#	}		
+
+
+
+
        location / {
 
             ########################################
@@ -419,7 +497,7 @@ server {
 
 #############################################
 #
-#  abby.wormbase.org ; starman 9003
+#  abby.wormbase.org ; starman 9002
 #
 #############################################
  server {
@@ -460,7 +538,7 @@ server {
             # proxy_set_header X-Forwarded-Port 443; #this is important for Catalyst Apps!
            
 	    # Proxy pass to a single server for testing:
-	    proxy_pass http://localhost:9003;
+	    proxy_pass http://localhost:9002;
 
 #           proxy_redirect   off;
    	    client_max_body_size            0;
@@ -490,7 +568,7 @@ server {
 
 #############################################
 #
-#  xshi.wormbase.org; starman on 9004
+#  xshi.wormbase.org; starman on 9003
 #
 #############################################
 
@@ -531,7 +609,7 @@ server {
             # proxy_set_header X-Forwarded-Port 443; #this is important for Catalyst Apps!
            
 	    # Proxy pass to a single server for testing:
-	    proxy_pass http://localhost:9004;
+	    proxy_pass http://localhost:9003;
 
 #           proxy_redirect   off;
    	    client_max_body_size            0;
